feat: Update favicon and manifest for LeRoy Residence
Replaces the Vite placeholder favicon with official site favicons and updates the manifest file to include the LeRoy Residence branding. This ensures a consistent and professional appearance across different browsers and devices.

--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
     <meta property="og:locale" content="es_CL" />
     <meta property="og:url" content="https://www.leroyresidence.cl/" />
 
-    <!-- Favicons & App Icons (Place files in public/ root folder) -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <!-- Favicons & App Icons (Professional Setup) -->
+    <link rel="icon" href="/favicon.ico" sizes="any">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#d4af37">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
