feat: Add sitemap to index and robots.txt
Includes the sitemap link in the HTML head and allows crawling of the entire site in robots.txt, improving SEO discoverability.

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <meta name="keywords" content="LeRoy Residence, corredor de propiedades, venta de casas, comprar casa, propiedades de lujo, inmobiliaria Concepción, San Pedro de la Paz, corretaje exclusivo, tasación comercial" />
     <meta name="author" content="LeRoy Residence" />
     
-    <!-- SEO TECHNICAL: Robots & Canonical -->
+    <!-- SEO TECHNICAL: Robots, Canonical & Sitemap -->
     <meta name="robots" content="index, follow, max-image-preview:large" />
     <link rel="canonical" href="https://www.leroyresidence.cl/" />
+    <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
     
     <!-- GOOGLE VERIFICATION (Reemplazar contenido cuando Google Search Console lo entregue) -->
     <!-- <meta name="google-site-verification" content="TU_CODIGO_DE_VERIFICACION_AQUI" /> -->
