feat: Update HTML language to Chilean Spanish
Updates the `lang` attribute in the `index.html` file from `es` to `es-CL` to accurately reflect Chilean Spanish, improving SEO and accessibility for the Chilean market.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es-CL">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- SEO PRIMARY: Title & Description -->
-    <!-- Optimized for: Branding + Core Service + Main Location + Value Prop -->
     <title>LeRoy Residence | Corretaje de Propiedades de Lujo en Concepción y Chile</title>
     <meta name="description" content="LeRoy Residence: La inmobiliaria líder en gestión de propiedades exclusivas en Chile. Compra, venta y asesoría experta en Concepción, San Pedro y alrededores. Confianza absoluta." />
     <meta name="keywords" content="LeRoy Residence, corredor de propiedades, venta de casas, comprar casa, propiedades de lujo, inmobiliaria Concepción, San Pedro de la Paz, corretaje exclusivo, tasación comercial" />
@@ -16,16 +15,13 @@
     <link rel="canonical" href="https://www.leroyresidence.cl/" />
     <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
     
-    <!-- GOOGLE VERIFICATION (Reemplazar contenido cuando Google Search Console lo entregue) -->
-    <!-- <meta name="google-site-verification" content="TU_CODIGO_DE_VERIFICACION_AQUI" /> -->
-
-    <!-- LOCAL SEO: Geo-Tags (Crucial for Real Estate in Concepción) -->
+    <!-- LOCAL SEO: Geo-Tags -->
     <meta name="geo.region" content="CL-BI" />
     <meta name="geo.placename" content="Concepción" />
     <meta name="geo.position" content="-36.8201;-73.0444" />
     <meta name="ICBM" content="-36.8201, -73.0444" />
 
-    <!-- SOCIAL MEDIA: Open Graph (Facebook, WhatsApp, LinkedIn) -->
+    <!-- SOCIAL MEDIA: Open Graph -->
     <meta property="og:site_name" content="LeRoy Residence" />
     <meta property="og:title" content="LeRoy Residence | Gestión Inmobiliaria de Alto Estándar" />
     <meta property="og:description" content="¿Buscas comprar o vender una propiedad exclusiva? Confía en la experiencia y discreción de LeRoy Residence." />
